1. Added a color to color.scss. 2. Created a mixin (list-block). 3. Created a list component (js+scss) 4. Added a list to app.component. js. Issue: list is not a list on mobile

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -1,2 +1,4 @@
 $main-color: var(--main-color, #000);
-$link-color: var(--link-color, #3d6bbf)
+$link-color: var(--link-color, #3d6bbf);
+$secondary-color: var(--secondary-color, #b1a);
+$list-color: var(--list-color, #d42121);
